--- a/layout/sass/style.scss
+++ b/layout/sass/style.scss
@@ -149,23 +149,23 @@ body{
     }
     &__entrées{
             font-weight: 100;
-            margin-bottom: 50px;
+            margin-bottom: 50px;          
             flex-basis: 33%;
-            animation: animationfoodcard 100ms linear 1ms 1 normal forwards;
+            animation: animationfoodcard 2000ms linear 1ms 1 normal forwards;
         }
     &__plats{
             font-weight: 100;
             margin-bottom: 50px;
             flex-basis: 34%;
             opacity: 0;
-            animation: animationfoodcard 100ms linear 200ms  normal forwards;
+            animation: animationfoodcard 2000ms linear 200ms  normal forwards;
         }
     &__dessert{
             font-weight: 100;
             margin-bottom: 50px;
             flex-basis: 33%;
             opacity: 0;
-            animation: animationfoodcard 100ms linear 400ms  normal forwards;
+            animation: animationfoodcard 2000ms linear 400ms  normal forwards;
         }   
 }
 
@@ -189,7 +189,7 @@ body{
 .commander{
     display: flex;
     margin-top: 30px;
-    padding-bottom: 30px;
+    padding-bottom: 70px;
 }
 /* stylemain*/
 
@@ -217,8 +217,9 @@ body{
         list-style: none;
     }
     a{
+        color:white;
         text-decoration: none;
-    }
+    } 
     li{
         margin-bottom: 5px;
         font-weight: 500;
