--- a/layout/sass/style.css
+++ b/layout/sass/style.css
@@ -167,14 +167,24 @@
   margin-left: 10px;
   margin-right: 10px;
   height: 60px;
+  -webkit-animation: jump 1s;
+          animation: jump 1s;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
   -webkit-animation: animationfoodsection 0.6s 1 normal both;
           animation: animationfoodsection 0.6s 1 normal both;
   -webkit-animation-timing-function: cubic-bezier(0.5, 1.58, 0.34, 0.82);
           animation-timing-function: cubic-bezier(0.5, 1.58, 0.34, 0.82);
 }
+.foodcard:hover .foodcard__title {
+  max-width: 180px;
+}
+.foodcard:hover .foodcard__description {
+  max-width: 180px;
+}
 .foodcard:hover .foodcard__check {
-  opacity: 1;
   width: 110px;
+  opacity: 1;
 }
 .foodcard:hover .foodcard__checkcircle {
   transform: rotate(360deg);
@@ -183,6 +193,7 @@
 .foodcard__text {
   flex-basis: 90%;
   padding: 10px;
+  flex: 1;
 }
 .foodcard__title {
   margin: 0;
@@ -190,10 +201,14 @@
   margin-left: 5px;
   font-size: 1em;
   font-weight: 500;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  max-width: 270px;
 }
 .foodcard__description {
   white-space: nowrap;
-  max-width: 260px;
+  max-width: 270px;
   overflow: hidden;
   margin-bottom: 0;
   margin-left: 5px;
@@ -219,9 +234,6 @@
   border-bottom-right-radius: 15px;
   opacity: 0;
   transition-duration: 0.8s;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 
 .restaurants__cartes {
@@ -451,6 +463,34 @@ main {
   }
 }
 /*Keyframes test pour améliorer l'animation sur le coeur*/
+@-webkit-keyframes jump {
+  0% {
+    transform: translateY(0);
+  }
+  25% {
+    transform: translateY(0.5rem);
+  }
+  75% {
+    transform: translateY(-0.5rem);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+@keyframes jump {
+  0% {
+    transform: translateY(0);
+  }
+  25% {
+    transform: translateY(0.5rem);
+  }
+  75% {
+    transform: translateY(-0.5rem);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
 /* styleheader*/
 .header {
   display: flex;
