--- a/layout/composants/_desktoptabletpview.scss
+++ b/layout/composants/_desktoptabletpview.scss
@@ -101,3 +101,10 @@
         max-width: 400px;
     }
 }
+
+@media all and (min-width: 1250px) {
+    .menu__container{
+        display: flex;
+        flex-direction: row;
+    }
+}
