aucune erreur au validateur CSS + HTML

--- a/layout/composants/_animations.scss
+++ b/layout/composants/_animations.scss
@@ -30,7 +30,7 @@
     width: max-content;
     height: max-content;
     opacity: 1;
-    animation: animationspinner 300ms linear 100s 1s normal forwards;
+    animation: animationspinner 300ms linear 1s normal forwards;
 }
 
 main{
