--- a/layout/sass/style.css
+++ b/layout/sass/style.css
@@ -66,7 +66,6 @@
   grid-column: 2;
   grid-row: 1;
   font-size: 30px;
-  background-image: transparent;
   transition: all 0.3s ease;
   cursor: pointer;
   background: transparent;
@@ -85,8 +84,6 @@
   display: block;
   color: #9c47fc;
   background: -webkit-linear-gradient(#9356DC, #FF79DA);
-  background-clip: text;
-  -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   opacity: 0%;
   transition-duration: 0.3s;
@@ -308,8 +305,8 @@
   height: -moz-max-content;
   height: max-content;
   opacity: 1;
-  -webkit-animation: animationspinner 300ms linear 100s 1s normal forwards;
-          animation: animationspinner 300ms linear 100s 1s normal forwards;
+  -webkit-animation: animationspinner 300ms linear 1s normal forwards;
+          animation: animationspinner 300ms linear 1s normal forwards;
 }
 
 main {
@@ -494,6 +491,7 @@ body {
 .localisation__text {
   margin-left: 10px;
   margin-top: 4px;
+  margin-bottom: 0;
   font-size: 1.2rem;
 }
 
@@ -547,7 +545,6 @@ body {
 .restaurants__title {
   margin-left: 32px;
   font-family: roboto;
-  font-weight: 1000;
 }
 .restaurants__legend {
   background-color: #99E2D0;
