--- a/layout/sass/style.scss
+++ b/layout/sass/style.scss
@@ -43,6 +43,7 @@ body{
     &__text{
         margin-left: 10px;
         margin-top:4px;
+        margin-bottom: 0;
         font-size: 1.2rem;
     }
 }
@@ -95,7 +96,6 @@ body{
     &__title{
         margin-left:32px;
         font-family:roboto ;
-        font-weight: 1000;
     }
     &__legend{
         @include nouveauattribute();
