--- a/layout/composants/_desktoptabletpview.scss
+++ b/layout/composants/_desktoptabletpview.scss
@@ -88,7 +88,14 @@
             max-width: 500px;
         }
     }
-
+    .foodcard:hover{
+        .foodcard__title{
+            max-width: 500px;
+        }
+        .foodcard__description{
+            max-width: 500px;
+        }
+    }
     .foodcard__title{
         text-overflow:initial;
         overflow: initial;
