--- a/layout/sass/style.css
+++ b/layout/sass/style.css
@@ -66,6 +66,7 @@
   grid-column: 2;
   grid-row: 1;
   font-size: 30px;
+  background-image: transparent;
   transition: all 0.3s ease;
   cursor: pointer;
   background: transparent;
@@ -84,6 +85,7 @@
   display: block;
   color: #9c47fc;
   background: -webkit-linear-gradient(#9356DC, #FF79DA);
+  -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   opacity: 0%;
   transition-duration: 0.3s;
