--- a/layout/composants/_cartes.scss
+++ b/layout/composants/_cartes.scss
@@ -1,165 +1,208 @@
+
 /* style carte*/
-.fonctionnement__etapes{
-    list-style: none;
-    counter-reset: compteListe;
-    display: flex;
-    flex-direction: column;
+.fonctionnement__etapes
+{
+	list-style: none;
+	counter-reset: compteListe;
+	display: flex;
+	flex-direction: column;
 }
 
-.fonctionnement__carte{
-    display: flex;
-    cursor: pointer;
-    background-color: $background;
-    @include cardradiusandshadow();
-    padding: 1.5rem 1.5rem;
-    margin-bottom: 20px;
-    margin-right: 25px;
-    position: relative;
-    &:hover{
-        background-color: #FBEFFD;
-        .fonctionnement__icone{
-            color: $primary;
-        }
-    }   
-    &.active{
-        background-color: #FBEFFD;
-        .fonctionnement__icone{
-            color: $primary;
-        } 
-    }
+.fonctionnement__carte
+{
+	display: flex;
+	cursor: pointer;
+	background-color: $background;
+	@include cardradiusandshadow();
+	padding: 1.5rem 1.5rem;
+	margin-bottom: 20px;
+	margin-right: 25px;
+	position: relative;
+	&:hover
+	{
+		background-color: #FBEFFD;
+		.fonctionnement__icone
+		{
+			color: $primary;
+		}
+	}
+
+	&.active
+	{
+		background-color: #FBEFFD;
+		.fonctionnement__icone
+		{
+			color: $primary;
+		}
+	}
 }
 
-.fonctionnement__carte::after{
-    counter-increment: compteListe 1;
-    content: counter(compteListe) " ";
-    background: $primary;
-    height: 1.5rem;
-    width: 1.5rem;
-    border-radius: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #fff;
-    position: absolute;
-    left: -.75rem;
+.fonctionnement__carte::after
+{
+	counter-increment: compteListe 1;
+	content: counter(compteListe) " ";
+	background: $primary;
+	height: 1.5rem;
+	width: 1.5rem;
+	border-radius: 100px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: #fff;
+	position: absolute;
+	left: -.75rem;
 }
 
-.foodcard{
-        @include cardradiusandshadow();
-        cursor: pointer;
-        background-color: #fff;
-        display: flex;
-        opacity: 1;
-        flex-direction: row;
-        margin-bottom: 15px;
-        margin-left: 10px;
-        margin-right: 10px;
-        height:60px;
-        &:hover{
-            .foodcard__title{
-                max-width: 180px;
-            }
-            .foodcard__description{
-                max-width: 180px;
-            }
-            .foodcard__check{
-                width: 80px;
-                opacity: 1;
-            }
-            .foodcard__checkcircle{
-                transform: rotate(360deg);
-                transition-duration: .9s;
-            }
-        }
-            &__text{
-            flex-basis: 90%;
-            padding: 10px;
-            flex:1;
-        }
-            &__title{
-            margin:0;
-            margin-bottom: -8px;
-            margin-left: 5px;
-            font-size: 1em; 
-            font-weight: 500;
-            white-space: nowrap;
-            text-overflow: ellipsis;
-            overflow: hidden;
-            max-width: 270px;
-        }
-            &__description{
-            white-space: nowrap;
-            max-width: 270px;
-            overflow: hidden;
-            margin-bottom: 0;
-            margin-left: 5px;
-            font-size: 0.9em;
-            font-weight: 100; 
-            text-overflow: ellipsis; 
-        }
-            &__price{
-            margin-right: 5px;
-            margin-bottom: 0;
-            margin-top: 30px;
-            text-align: right;
-            font-weight: 500;
-        }
-            &__check{
-            cursor: pointer;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #99E2D0;
-            width:0px;
-            border-top-right-radius: 15px;
-            border-bottom-right-radius: 15px;
-            opacity: 0;
-            transition-duration: 0.8s;
-        } 
+.foodcard
+{
+	@include cardradiusandshadow();
+	cursor: pointer;
+	background-color: #fff;
+	display: flex;
+	opacity: 1;
+	flex-direction: row;
+	margin-bottom: 15px;
+	margin-left: 10px;
+	margin-right: 10px;
+	height:60px;
+	&:hover
+	{
+		.foodcard__title
+		{
+			max-width: 180px;
+		}
+
+		.foodcard__description
+		{
+			max-width: 180px;
+		}
+
+		.foodcard__check
+		{
+			width: 80px;
+			opacity: 1;
+		}
+
+		.foodcard__checkcircle
+		{
+			transform: rotate(360deg);
+			transition-duration: .9s;
+		}
+	}
+
+	&__text
+	{
+		flex-basis: 90%;
+		padding: 10px;
+		flex:1;
+	}
+
+	&__title
+	{
+		margin:0;
+		margin-bottom: -8px;
+		margin-left: 5px;
+		font-size: 1em;
+		font-weight: 500;
+		white-space: nowrap;
+		text-overflow: ellipsis;
+		overflow: hidden;
+		max-width: 270px;
+	}
+
+	&__description
+	{
+		white-space: nowrap;
+		max-width: 270px;
+		overflow: hidden;
+		margin-bottom: 0;
+		margin-left: 5px;
+		font-size: 0.9em;
+		font-weight: 100;
+		text-overflow: ellipsis;
+	}
+
+	&__price
+	{
+		margin-right: 5px;
+		margin-bottom: 0;
+		margin-top: 30px;
+		text-align: right;
+		font-weight: 500;
+	}
+
+	&__check
+	{
+		cursor: pointer;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background-color: #99E2D0;
+		width:0px;
+		border-top-right-radius: 15px;
+		border-bottom-right-radius: 15px;
+		opacity: 0;
+		transition-duration: 0.8s;
+	}
+
 }
 
-.restaurants__cartes{
-    @include cardradiusandshadow();
-    background-color: #fff;
-    margin-bottom: 20px;
-    margin-left: 10px;
-    margin-right: 10px;
-    transform:scale(1);
-    transition-property: transform;
-    transition-duration: 500ms;
-    cursor: pointer;
-    .restaurants__carteslink{
-            text-decoration:none;
-                &:hover{
-                transform: scale(1.03);
-                }
-            }
-    footer{
-        display: grid;
-        margin-left: 5px;
-        padding: 12px;
-        color: black;
-    }
-    h3{
-        margin-top: 0px;
-        margin-right: 0px;
-        margin-bottom: 3px;
-        margin-left: 0px;
-    }
-    .restaurants__quartier{
-        font-weight: 100;
-        grid-column: 1;
-    }
-    .favorite{
-        grid-column: 2;
-        text-align: right;
-        grid-row: 1/3;
-    }
+.restaurants__cartes
+{
+	@include cardradiusandshadow();
+	background-color: #fff;
+	margin-bottom: 20px;
+	margin-left: 10px;
+	margin-right: 10px;
+	transform:scale(1);
+	transition-property: transform;
+	transition-duration: 500ms;
+	cursor: pointer;
+	.restaurants__carteslink
+	{
+		text-decoration:none;
+		&:hover
+		{
+			transform: scale(1.03);
+		}
+	}
+
+	footer
+	{
+		display: grid;
+		margin-left: 5px;
+		padding: 12px;
+		color: black;
+	}
+
+	h3
+	{
+		margin-top: 0px;
+		margin-right: 0px;
+		margin-bottom: 3px;
+		margin-left: 0px;
+	}
+
+	.restaurants__quartier
+	{
+		font-weight: 100;
+		grid-column: 1;
+	}
+
+	.favorite
+	{
+		grid-column: 2;
+		text-align: right;
+		grid-row: 1/3;
+	}
 }
 
-.carte2{
-    .fullheart{
-        opacity: 100%;
-    }
+.carte2
+{
+	.fullheart
+	{
+		opacity: 100%;
+	}
 }
+
 /* style carte*/
