--- a/layout/composants/_icones.scss
+++ b/layout/composants/_icones.scss
@@ -1,58 +1,66 @@
-.fonctionnementicone{
-    &:hover{
-        color: #9356DC;
-    }
+
+.fonctionnementicone
+{
+	&:hover
+	{
+		color: #9356DC;
+	}
 }
 
-.iconheart{
-    font-size:30px;
-    cursor: pointer;
+.iconheart
+{
+	font-size:30px;
+	cursor: pointer;
 }
 
-.emptyheart{
-    cursor: pointer;
-    text-align: right;
-    grid-column: 2;
-    grid-row: 1;
-    font-size:30px;
-    transition: all 0.3s ease; 
-    cursor: pointer;
-    background: transparent;
-    opacity: 100%;
-    &:hover{
-        opacity: 0%;
-    }
+.emptyheart
+{
+	cursor: pointer;
+	text-align: right;
+	grid-column: 2;
+	grid-row: 1;
+	font-size:30px;
+	transition: all 0.3s ease;
+	cursor: pointer;
+	background: transparent;
+	opacity: 100%;
+	&:hover
+	{
+		opacity: 0%;
+	}
 }
 
-
-.fullheart{
-    text-align: right;
-    grid-column: 2;
-    grid-row: 1;
-    cursor: pointer;
-    font-size:30px;
-    display: block;
-    color: #9c47fc;
-    background: -webkit-linear-gradient($primary, $secondary);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    opacity: 0%;
-    transition-duration: 0.3s;
-    &:hover{
-        opacity: 100%;
-    }
+.fullheart
+{
+	text-align: right;
+	grid-column: 2;
+	grid-row: 1;
+	cursor: pointer;
+	font-size:30px;
+	display: block;
+	color: #9c47fc;
+	background: -webkit-linear-gradient($primary, $secondary);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	opacity: 0%;
+	transition-duration: 0.3s;
+	&:hover
+	{
+		opacity: 100%;
+	}
 }
 
-.iconback{
-    font-size:20px;
-    margin-top: 12px;
-    margin-left: 12px;
+.iconback
+{
+	font-size:20px;
+	margin-top: 12px;
+	margin-left: 12px;
 }
 
-.iconecercle{
-    font-size: 1.3em;
-    background-color: $tertiary;
-    color: white;
-    transform-origin: center;
+.iconecercle
+{
+	font-size: 1.3em;
+	background-color: $tertiary;
+	color: white;
+	transform-origin: center;
 }
-
