--- a/layout/composants/_cartes.scss
+++ b/layout/composants/_cartes.scss
@@ -65,6 +65,7 @@
 	margin-left: 10px;
 	margin-right: 10px;
 	height:60px;
+    animation: animationfoodsection 0.1s 1 normal forwards;
 	&:hover
 	{
 		.foodcard__title
