--- a/layout/sass/style.css
+++ b/layout/sass/style.css
@@ -165,6 +165,8 @@
   margin-left: 10px;
   margin-right: 10px;
   height: 60px;
+  -webkit-animation: animationfoodsection 0.1s 1 normal forwards;
+          animation: animationfoodsection 0.1s 1 normal forwards;
 }
 .foodcard:hover .foodcard__title {
   max-width: 180px;
@@ -767,8 +769,13 @@ body {
     flex-direction: row;
   }
 
+  .footer__logo {
+    text-align: center;
+  }
+
   .footer__link {
     justify-content: center;
+    display: flex;
   }
 
   .footer__list a {
@@ -808,6 +815,10 @@ body {
   .menu__container {
     display: flex;
     flex-direction: row;
+  }
+
+  .cardcontainer {
+    width: 320px;
   }
 }
 /* styledesktop*//*# sourceMappingURL=style.css.map */
