--- a/layout/composants/_cartes.scss
+++ b/layout/composants/_cartes.scss
@@ -65,7 +65,8 @@
 	margin-left: 10px;
 	margin-right: 10px;
 	height:60px;
-    animation: animationfoodsection 0.1s 1 normal forwards;
+    animation: animationfoodsection 0.6s 1 normal both;
+    animation-timing-function: cubic-bezier(.5,1.58,.34,.82);
 	&:hover
 	{
 		.foodcard__title
