--- a/layout/sass/style.css
+++ b/layout/sass/style.css
@@ -165,8 +165,10 @@
   margin-left: 10px;
   margin-right: 10px;
   height: 60px;
-  -webkit-animation: animationfoodsection 0.1s 1 normal forwards;
-          animation: animationfoodsection 0.1s 1 normal forwards;
+  -webkit-animation: animationfoodsection 0.6s 1 normal both;
+          animation: animationfoodsection 0.6s 1 normal both;
+  -webkit-animation-timing-function: cubic-bezier(0.5, 1.58, 0.34, 0.82);
+          animation-timing-function: cubic-bezier(0.5, 1.58, 0.34, 0.82);
 }
 .foodcard:hover .foodcard__title {
   max-width: 180px;
