--- a/views/ledelicedessens.html
+++ b/views/ledelicedessens.html
@@ -11,23 +11,21 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous"/>
-		<link rel="stylesheet" href="./layout/sass/style.css">
+		<link rel="stylesheet" href="/Users/chips/Desktop/AntoineChirat_3_15062021/publichtml/css/style.css">
 	</head>
 	<body>
 		<header class="header">
-			<div class="header__icon">
-				<a href="index.html"><i class="fas fa-arrow-left iconback"></i></a>
-			</div>
+			<a href="/Users/chips/Desktop/AntoineChirat_3_15062021/index.html"><i class="fas fa-arrow-left iconback"></i></a>
 			<h1 class="header__logo">ohmyfood</h1>
 		</header>
 		<main>
 			<div class="background">
-				<img class="background__picture" src="layout/composants/images/alafrancaise.jpg" alt>
+				<img class="background__picture" src="/Users/chips/Desktop/AntoineChirat_3_15062021/publichtml/images/ledelicedessens.jpg" alt>
 			</div>
 			<section class="menu">
 				<header class="menu__header">
 					<div class="menu__title">
-						À la française
+						Le délice des sens
 					</div>
 					<div class="menu__favorite">
 						<i class="far fa-heart emptyheart"></i>
@@ -38,11 +36,11 @@
 					<div class="menu__entrées">
 						<h3 class="foodtitle">ENTRÉES</h3>
 						<div class="cardcontainer">
-							<div class="foodcard">
-								<div class="delay-0 foodcard__text">
-									<h4 class="foodcard__title">Tartare de poulpe acidulé</h4>
+							<div class="delay-0 foodcard">
+								<div class="foodcard__text">
+									<h4 class="foodcard__title">Tartare de thon</h4>
 									<p class="foodcard__description">
-										Aux zestes d'orange
+										Assaisonné au yuzu
 									</p>
 								</div>
 								<p class="foodcard__price">
@@ -58,9 +56,9 @@
 						<div class="cardcontainer">
 							<div class="delay-1 foodcard">
 								<div class="foodcard__text">
-									<h4 class="foodcard__title">Velouté de légumes d'antan</h4>
+									<h4 class="foodcard__title">Bouchée de homard croustillant </h4>
 									<p class="foodcard__description">
-										Carotte, panais, topinambour
+										Et sa farandole de petits légumes
 									</p>
 								</div>
 								<p class="foodcard__price">
@@ -76,9 +74,9 @@
 						<div class="cardcontainer">
 							<div class="delay-2 foodcard">
 								<div class="foodcard__text">
-									<h4 class="foodcard__title">Soupe à l'oignon</h4>
+									<h4 class="foodcard__title">Velouté de cèpes </h4>
 									<p class="foodcard__description">
-										Revisitée
+										Aux truffes
 									</p>
 								</div>
 								<p class="foodcard__price">
@@ -95,11 +93,11 @@
 					<div class="menu__plats">
 						<h3 class="foodtitle">PLATS</h3>
 						<div class="cardcontainer">
-							<div class="delay3 foodcard">
+							<div class="delay-3 foodcard">
 								<div class="foodcard__text">
-									<h4 class="foodcard__title">Coquilles Saint-Jacques</h4>
+									<h4 class="foodcard__title">Poulet rôti aux herbes de Provence</h4>
 									<p class="foodcard__description">
-										Accompagnées d'une purée de panais
+										Et sa crème de truffe
 									</p>
 								</div>
 								<p class="foodcard__price">
@@ -115,9 +113,9 @@
 						<div class="cardcontainer">
 							<div class="delay-4 foodcard">
 								<div class="foodcard__text">
-									<h4 class="foodcard__title">Magret de canard</h4>
+									<h4 class="foodcard__title">Langouste rôtie</h4>
 									<p class="foodcard__description">
-										Et parmentier de pommes de terre
+										Et ses légumes de saison
 									</p>
 								</div>
 								<p class="foodcard__price">
@@ -131,11 +129,11 @@
 							</div>
 						</div>
 						<div class="cardcontainer">
-							<div class="foodcard">
+							<div class="delay-5 foodcard">
 								<div class="foodcard__text">
-									<h4 class="foodcard__title">Pigeonneau d’Ille-et-Vilaine</h4>
+									<h4 class="foodcard__title">Côte de boeuf Angus</h4>
 									<p class="foodcard__description">
-										Sur son lit de gnocchis aux légumes
+										Et sa purée de panais
 									</p>
 								</div>
 								<p class="foodcard__price">
@@ -152,11 +150,11 @@
 					<div class="menu__dessert">
 						<h3 class="foodtitle">DESSERTS</h3>
 						<div class="cardcontainer">
-							<div class="delay-5 foodcard">
+							<div class="delay-6 foodcard">
 								<div class="foodcard__text">
-									<h4 class="foodcard__title">Pétales de violettes glacés</h4>
+									<h4 class="foodcard__title">Farandole de desserts</h4>
 									<p class="foodcard__description">
-										Et purée de noisettes
+										Du chef
 									</p>
 								</div>
 								<p class="foodcard__price">
@@ -170,11 +168,11 @@
 							</div>
 						</div>
 						<div class="cardcontainer">
-							<div class="delay-6 foodcard">
+							<div class="delay-7 foodcard">
 								<div class="foodcard__text">
-									<h4 class="foodcard__title">Fondant au chocolat</h4>
+									<h4 class="foodcard__title">Crème brulée </h4>
 									<p class="foodcard__description">
-										revisité
+										Revisitée
 									</p>
 								</div>
 								<p class="foodcard__price">
@@ -188,11 +186,11 @@
 							</div>
 						</div>
 						<div class="cardcontainer">
-							<div class="delay-7 foodcard">
+							<div class="delay-8 foodcard">
 								<div class="foodcard__text">
-									<h4 class="foodcard__title">Millefeuille croustillant</h4>
+									<h4 class="foodcard__title">Tiramisu</h4>
 									<p class="foodcard__description">
-										Myrtilles et pâte d’amande
+										À la noisette
 									</p>
 								</div>
 								<p class="foodcard__price">
